Fix letter spacing

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -226,8 +226,8 @@
 
 .post-title {
   @include relative-font-size(2.625);
-  letter-spacing: -1px;
-  line-height: 1;
+  letter-spacing: 1px;
+  line-height: 1.2;
 
   @include media-query($on-laptop) {
     @include relative-font-size(2.25);
